...
        horizontal: 20,
      ),
      children: [
        _makeOptionButton(
          localizations.menu_language_label,
          goToLanguage,
          const Key('button-lang'),
        ),
        _makeOptionButton(
          localizations.menu_profiles_label,
          goToProfileManagement,
        ),
        _makeOptionButton(
...
