...
                ),
              ],
            ),
            const SizedBox(height: smallSpace),
            Center(
              child: ElevatedButton(
                key: const Key('record'),
                onPressed: onRecordButtonPressed,
                style: elevatedButtonStyle.copyWith(
                  backgroundColor: WidgetStatePropertyAll(
                    isRecording ? cardinal : blueChill,
                  ),
                  foregroundColor: const WidgetStatePropertyAll(white),
...
